syntax = "proto3";
package quasarlabs.quasarnode.qbank;

option go_package = "github.com/quasarlabs/quasarnode/x/qbank/types";
import "cosmos/base/v1beta1/coin.proto";
import "gogoproto/gogo.proto";

// QCoins defines encoding/decoding for the slice of sdk.coins to be used in KV stores. 
message QCoins {
    repeated cosmos.base.v1beta1.Coin coins = 1
     [(gogoproto.nullable) = false, (gogoproto.castrepeated) = "github.com/cosmos/cosmos-sdk/types.Coins"];
}

// QDenoms defines encoding/decoding for the slice of denoms to be used in KV stores
message QDenoms {
    repeated string denoms = 1;
}

// LockupTypes defines different types of locktypes to be used in the system for users deposit
enum LockupTypes {
    Invalid = 0;
    Days_7 = 1; // 7 Days
    Days_21 = 2; // 21 Days of lockup
    Months_1 = 3; // 1 Month of lockup
    Months_3 = 4; // 3 Months of lockup
  }

message EpochLockupCoinInfo {
    uint64  epochDay = 1;
    LockupTypes lockupPeriod  = 2;
    cosmos.base.v1beta1.Coin coin = 3 [ (gogoproto.nullable) = false ];
}

message EpochLockupCoins {
    repeated EpochLockupCoinInfo infos = 1 [ (gogoproto.nullable) = false ];
}


